--- a/src/js/components/tabs/tabs.less
+++ b/src/js/components/tabs/tabs.less
@@ -37,10 +37,9 @@
       color: white;
     }
 
-    // &:focus {
-    //   background: #ccc;
-    //   // outline: none;
-    // }
+    &:focus {
+      outline: none;
+    }
 
     &[aria-selected="true"] {
       // border-bottom-color: @true;
